fixed user button size and sidebar collapse after page reloading

--- a/front/src/shared/ui/sidebar/components/user-button/user-button.module.scss
+++ b/front/src/shared/ui/sidebar/components/user-button/user-button.module.scss
@@ -10,6 +10,11 @@
 	&:global(.collapsed) {
 		width: 40px;
 		height: 40px;
+
+		> img {
+			width: 40px;
+			height: 40px;
+		}
 	}
 }
 
